adds filter endpoints