@@ -1,7 +1,9 @@
 package com.example.demo.services.search;
 
-import tools.jackson.databind.annotation.JsonDeserialize;
+import com.fasterxml.jackson.annotation.JsonCreator;
+import com.fasterxml.jackson.databind.annotation.JsonDeserialize;
 
+import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
@@ -18,9 +20,33 @@ public final class FieldPathDto {
     private final List<String> segments;
 
     public FieldPathDto(List<String> segments) {
-        this.segments = segments == null
-                ? Collections.emptyList()
-                : List.copyOf(segments);
+        this.segments = segments == null ? Collections.emptyList() : List.copyOf(segments);
+    }
+
+    @JsonCreator(mode = JsonCreator.Mode.DELEGATING)
+    public static FieldPathDto fromJson(Object value) {
+        if (value == null) {
+            return new FieldPathDto(List.of());
+        }
+
+        if (value instanceof String s) {
+            if (s.isBlank()) {
+                return new FieldPathDto(List.of());
+            }
+            return new FieldPathDto(List.of(s.split("\\.")));
+        }
+
+        if (value instanceof List<?> list) {
+            List<String> segs = new ArrayList<>(list.size());
+            for (Object o : list) {
+                if (o != null) {
+                    segs.add(String.valueOf(o));
+                }
+            }
+            return new FieldPathDto(segs);
+        }
+
+        throw new IllegalArgumentException("Unsupported field format: " + value.getClass());
     }
 
     public List<String> segments() {
@@ -29,7 +55,7 @@ public final class FieldPathDto {
 
     @Override
     public String toString() {
-        return "FieldPathDto{segments=" + segments + '}';
+        return "FieldPathDto{" + "segments=" + segments + '}';
     }
 
     @Override
